--- a/src/main/resources/project/licenta/login.fxml
+++ b/src/main/resources/project/licenta/login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Login">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Login">
    <children>
       <Label layoutX="237.0" layoutY="46.0" text="Log in " textAlignment="CENTER">
          <font>
