--- a/src/main/resources/project/licenta/register.fxml
+++ b/src/main/resources/project/licenta/register.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Register">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml" fx:controller="project.licenta.Register">
    <children>
       <Label layoutX="222.0" layoutY="28.0" text="Register" textAlignment="CENTER">
          <font>
