--- a/src/main/resources/project/licenta/login.fxml
+++ b/src/main/resources/project/licenta/login.fxml
@@ -1,49 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Login">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Login">
    <children>
-      <Label layoutX="237.0" layoutY="46.0" text="Log in " textAlignment="CENTER">
+      <ImageView fitHeight="400.0" fitWidth="600.0" layoutX="-1.0" layoutY="-1.0">
+         <image>
+            <Image url="@images/login_background.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="237.0" layoutY="46.0" text="Log in " textAlignment="CENTER" textFill="#d9e9f2">
          <font>
             <Font name="Gadugi Bold" size="35.0" />
          </font>
       </Label>
-      <Label layoutX="87.0" layoutY="147.0" text=" Username: ">
-         <font>
-            <Font name="Gabriola" size="20.0" />
-         </font>
-      </Label>
-      <Label layoutX="91.0" layoutY="187.0" text="Password: ">
-         <font>
-            <Font name="Gabriola" size="20.0" />
-         </font>
-      </Label>
-      <TextField fx:id="txtUser" layoutX="177.0" layoutY="148.0" prefHeight="26.0" prefWidth="240.0">
+      <TextField fx:id="txtUser" layoutX="177.0" layoutY="148.0" opacity="0.29" prefHeight="26.0" prefWidth="240.0" promptText="Username">
          <font>
             <Font name="Times New Roman Bold" size="16.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="txtPass" layoutX="177.0" layoutY="184.0" prefHeight="26.0" prefWidth="240.0">
+      <PasswordField fx:id="txtPass" layoutX="177.0" layoutY="184.0" opacity="0.29" prefHeight="26.0" prefWidth="240.0" promptText="Password">
          <font>
             <Font name="Times New Roman Bold" size="17.0" />
          </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
       </PasswordField>
-      <Button fx:id="btnLogin" layoutX="177.0" layoutY="237.0" mnemonicParsing="false" onAction="#btnLoginOnClick" text="Log in">
+      <Button fx:id="btnLogin" layoutX="170.0" layoutY="243.0" mnemonicParsing="false" onAction="#btnLoginOnClick" prefHeight="43.0" prefWidth="240.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Log in" textFill="#d9e9f2">
          <font>
             <Font name="Gadugi Bold" size="20.0" />
          </font>
       </Button>
-      <Button fx:id="btnRegister" layoutX="312.0" layoutY="237.0" mnemonicParsing="false" onAction="#btnRegisterOnClick" text="Register">
+      <Button fx:id="btnRegister" layoutX="170.0" layoutY="304.0" mnemonicParsing="false" onAction="#btnRegisterOnClick" prefHeight="43.0" prefWidth="240.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Register" textFill="#d9e9f2">
          <font>
             <Font name="Gadugi Bold" size="20.0" />
          </font>
       </Button>
+      <AnchorPane layoutX="237.0" layoutY="97.0" prefHeight="7.0" prefWidth="105.0" style="-fx-background-color: #000080;" />
+      <ImageView fitHeight="30.0" fitWidth="40.0" layoutX="110.0" layoutY="148.0">
+         <image>
+            <Image url="@images/user_icon.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="33.0" fitWidth="40.0" layoutX="110.0" layoutY="184.0">
+         <image>
+            <Image url="@images/pass_icon.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
