--- a/src/main/resources/project/licenta/register.fxml
+++ b/src/main/resources/project/licenta/register.fxml
@@ -4,61 +4,68 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml" fx:controller="project.licenta.Register">
+<AnchorPane prefHeight="394.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Register">
    <children>
-      <Label layoutX="222.0" layoutY="28.0" text="Register" textAlignment="CENTER">
+      <ImageView fitHeight="446.0" fitWidth="659.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/login_background.jpg" />
+         </image>
+      </ImageView>
+      <Label layoutX="273.0" layoutY="30.0" text="Register" textAlignment="CENTER" textFill="#d9e9f2">
          <font>
             <Font name="Gadugi Bold" size="35.0" />
          </font>
       </Label>
-      <Label layoutX="94.0" layoutY="109.0" text=" Username: ">
+      <Label layoutX="81.0" layoutY="115.0" text=" Username: " textFill="#d9e9f2">
          <font>
-            <Font name="Gabriola" size="20.0" />
+            <Font name="Gabriola" size="30.0" />
          </font>
       </Label>
-      <Label layoutX="83.0" layoutY="253.0" text="New password: ">
+      <Label layoutX="65.0" layoutY="260.0" text="New password: " textFill="#d9e9f2">
          <font>
-            <Font name="Gabriola" size="20.0" />
+            <Font name="Gabriola" size="30.0" />
          </font>
       </Label>
-      <TextField fx:id="txtUser" layoutX="207.0" layoutY="107.0" prefHeight="26.0" prefWidth="240.0">
+      <TextField fx:id="txtUser" layoutX="221.0" layoutY="119.0" opacity="0.29" prefHeight="26.0" prefWidth="240.0">
          <font>
             <Font name="Times New Roman Bold" size="16.0" />
          </font>
       </TextField>
-      <PasswordField fx:id="txtPassNew" layoutX="207.0" layoutY="250.0" prefHeight="26.0" prefWidth="240.0">
+      <PasswordField fx:id="txtPassNew" layoutX="221.0" layoutY="263.0" opacity="0.29" prefHeight="26.0" prefWidth="240.0">
          <font>
             <Font name="Times New Roman Bold" size="17.0" />
          </font>
       </PasswordField>
-      <Button fx:id="btnRegister" onAction="#btnRegisterOnClick" layoutX="222.0" layoutY="309.0" mnemonicParsing="false" text="Register">
+      <Button fx:id="btnRegister" layoutX="221.0" layoutY="316.0" mnemonicParsing="false" onAction="#btnRegisterOnClick" prefHeight="46.0" prefWidth="240.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Register" textFill="#d9e9f2">
          <font>
             <Font name="Gadugi Bold" size="20.0" />
          </font>
       </Button>
-      <PasswordField fx:id="txtPass" layoutX="207.0" layoutY="200.0" prefHeight="26.0" prefWidth="240.0">
+      <PasswordField fx:id="txtPass" layoutX="221.0" layoutY="212.0" opacity="0.29" prefHeight="26.0" prefWidth="240.0">
          <font>
             <Font name="Times New Roman Bold" size="17.0" />
          </font>
       </PasswordField>
-      <Label layoutX="98.0" layoutY="202.0" text="Password: ">
+      <Label layoutX="88.0" layoutY="209.0" text="Password: " textFill="#d9e9f2">
          <font>
-            <Font name="Gabriola" size="20.0" />
+            <Font name="Gabriola" size="30.0" />
          </font>
       </Label>
-      <TextField fx:id="txtEmail" layoutX="207.0" layoutY="153.0" prefHeight="26.0" prefWidth="240.0">
+      <TextField fx:id="txtEmail" layoutX="221.0" layoutY="165.0" opacity="0.29" prefHeight="26.0" prefWidth="240.0">
          <font>
             <Font name="Times New Roman Bold" size="16.0" />
          </font>
       </TextField>
-      <Label layoutX="94.0" layoutY="155.0" text="Email: ">
+      <Label layoutX="105.0" layoutY="161.0" text="Email: " textFill="#d9e9f2">
          <font>
-            <Font name="Gabriola" size="20.0" />
+            <Font name="Gabriola" size="30.0" />
          </font>
       </Label>
+      <AnchorPane layoutX="285.0" layoutY="78.0" prefHeight="6.0" prefWidth="111.0" style="-fx-background-color: #000080;" />
    </children>
 </AnchorPane>
