--- a/src/main/resources/project/licenta/subjects_view.fxml
+++ b/src/main/resources/project/licenta/subjects_view.fxml
@@ -1,14 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="project.licenta.Subjects_view"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="616.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Subjects_view">
+   <children>
+      <ImageView fitHeight="617.0" fitWidth="867.0" layoutX="-3.0" pickOnBounds="true">
+         <image>
+            <Image url="@images/login_background.jpg" />
+         </image>
+      </ImageView>
+      <AnchorPane fx:id="paneMenu" layoutX="10.0" layoutY="29.0" prefHeight="56.0" prefWidth="838.0">
+         <children>
+            <ImageView fitHeight="92.0" fitWidth="867.0" layoutX="-13.0" layoutY="-26.0" pickOnBounds="true">
+               <image>
+                  <Image url="@images/menu_background.jpg" />
+               </image>
+            </ImageView>
+            <Button fx:id="btnLogout" layoutX="747.0" layoutY="1.0" mnemonicParsing="false" onAction="#btnLogoutOnClick" style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="20.0" />
+               </font>
+            </Button>
+            <Button fx:id="btnBack" layoutX="551.0" layoutY="1.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Back to semesters" textAlignment="CENTER" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="20.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="63.0" fitWidth="195.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/icon.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="paneButtons" layoutX="32.0" layoutY="188.0" prefHeight="406.0" prefWidth="200.0">
+         <children>
+            <Label layoutX="14.0" layoutY="3.0" text="To add courses" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnAdd" layoutX="110.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnAddOnClick" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+      <Label fx:id="lblSemester" layoutX="51.0" layoutY="119.0" />
+      <AnchorPane fx:id="paneAdd" layoutX="445.0" layoutY="137.0" prefHeight="74.0" prefWidth="396.0" visible="false">
+         <children>
+            <AnchorPane layoutX="14.0" layoutY="34.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
+               <children>
+                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                     <image>
+                        <Image url="@images/Subject_icon.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="txtSubjectName" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0" promptText="Subject name" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                     <font>
+                        <Font name="Times New Roman Bold" size="16.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </AnchorPane>
+            <Button fx:id="btnNewSubject" layoutX="311.0" layoutY="36.0" mnemonicParsing="false" onAction="#btnNewSubjectOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Button>
+            <Label fx:id="label" layoutX="28.0" layoutY="6.0" />
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
