--- a/src/main/resources/project/licenta/subjects_view.fxml
+++ b/src/main/resources/project/licenta/subjects_view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -8,26 +9,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="616.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Subjects_view">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="616.0" prefWidth="906.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Subjects_view">
    <children>
-      <ImageView fitHeight="617.0" fitWidth="867.0" layoutX="-3.0" pickOnBounds="true">
+      <ImageView fitHeight="617.0" fitWidth="914.0" layoutX="-3.0" pickOnBounds="true">
          <image>
             <Image url="@images/login_background.jpg" />
          </image>
       </ImageView>
       <AnchorPane fx:id="paneMenu" layoutX="10.0" layoutY="29.0" prefHeight="56.0" prefWidth="838.0">
          <children>
-            <ImageView fitHeight="92.0" fitWidth="867.0" layoutX="-13.0" layoutY="-26.0" pickOnBounds="true">
+            <ImageView fitHeight="92.0" fitWidth="914.0" layoutX="-13.0" layoutY="-26.0" pickOnBounds="true">
                <image>
                   <Image url="@images/menu_background.jpg" />
                </image>
             </ImageView>
-            <Button fx:id="btnLogout" layoutX="747.0" layoutY="1.0" mnemonicParsing="false" onAction="#btnLogoutOnClick" style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
+            <Button fx:id="btnLogout" layoutX="788.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnLogoutOnClick" style="-fx-background-color: transparent;" text="Log out" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btnBack" layoutX="551.0" layoutY="1.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Back to semesters" textAlignment="CENTER" textFill="#d9e9f2">
+            <Button fx:id="btnBack" layoutX="577.0" layoutY="1.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Back to semesters" textAlignment="CENTER" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
@@ -54,9 +55,9 @@
          </children>
       </AnchorPane>
       <Label fx:id="lblSemester" layoutX="51.0" layoutY="119.0" />
-      <AnchorPane fx:id="paneAdd" layoutX="445.0" layoutY="137.0" prefHeight="74.0" prefWidth="396.0" visible="false">
+      <AnchorPane fx:id="paneAdd" layoutX="451.0" layoutY="143.0" prefHeight="279.0" prefWidth="450.0" visible="false">
          <children>
-            <AnchorPane layoutX="14.0" layoutY="34.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
+            <AnchorPane layoutX="65.0" layoutY="35.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
                <children>
                   <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
                      <image>
@@ -70,12 +71,37 @@
                   </TextField>
                </children>
             </AnchorPane>
-            <Button fx:id="btnNewSubject" layoutX="311.0" layoutY="36.0" mnemonicParsing="false" onAction="#btnNewSubjectOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+            <Button fx:id="btnNewSubject" layoutX="163.0" layoutY="209.0" mnemonicParsing="false" onAction="#btnNewSubjectOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Button>
             <Label fx:id="label" layoutX="28.0" layoutY="6.0" />
+            <AnchorPane layoutX="28.0" layoutY="87.0" prefHeight="35.0" prefWidth="356.0" style="-fx-background-color: #003d66;">
+               <children>
+                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                     <image>
+                        <Image url="@images/teacher_icon.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="txtTeacher" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="221.0" promptText="Teacher" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                     <font>
+                        <Font name="Times New Roman Bold" size="16.0" />
+                     </font>
+                  </TextField>
+                  <ComboBox fx:id="cmbTeacher" layoutX="241.0" layoutY="3.0" prefHeight="26.0" prefWidth="106.0" />
+               </children>
+            </AnchorPane>
+            <Button fx:id="btnPlus" layoutX="404.0" layoutY="89.0" mnemonicParsing="false" onAction="#btnPlusOnClick" style="-fx-background-color: #010056;" text="+" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Button>
+            <Label fx:id="lblTeachers" layoutX="65.0" layoutY="151.0" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="12.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </children>
