--- a/src/main/resources/project/licenta/subjects_view.fxml
+++ b/src/main/resources/project/licenta/subjects_view.fxml
@@ -3,12 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Subjects_view">
    <children>
@@ -39,21 +37,41 @@
                   <Image url="@images/icon.png" />
                </image>
             </ImageView>
-            <Button fx:id="btnTimetable" layoutX="453.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnTimetableOnClick" style="-fx-background-color: transparent;" text="Timetable" textAlignment="CENTER" textFill="#d9e9f2">
+            <Button fx:id="btnTimetable" layoutX="453.0" layoutY="-2.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="Timetable" textAlignment="CENTER" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="paneButtons" layoutX="32.0" layoutY="188.0" prefHeight="406.0" prefWidth="200.0">
+      <AnchorPane fx:id="paneButtons" layoutX="32.0" layoutY="188.0" prefHeight="406.0" prefWidth="341.0">
          <children>
-            <Label layoutX="14.0" layoutY="3.0" text="To add courses" textFill="#d9e9f2">
+            <Button fx:id="btnActual" layoutX="171.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnActualOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Button>
+            <Label layoutX="14.0" layoutY="3.0" text="To add actual subjects" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Label>
-            <Button fx:id="btnAdd" layoutX="110.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnAddOnClick" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+            <Label layoutX="14.0" layoutY="29.0" text="To add optional subjects" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnOptional" layoutX="188.0" layoutY="24.0" mnemonicParsing="false" onAction="#btnOptionalOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Button>
+            <Label layoutX="14.0" layoutY="55.0" text="To add subjects from previous years" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnPrevious" layoutX="268.0" layoutY="50.0" mnemonicParsing="false" onAction="#btnPreviousOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
@@ -61,7 +79,7 @@
          </children>
       </AnchorPane>
       <Label fx:id="lblSemester" layoutX="51.0" layoutY="119.0" />
-      <AnchorPane fx:id="paneAdd" layoutX="451.0" layoutY="143.0" prefHeight="279.0" prefWidth="450.0" visible="false">
+      <AnchorPane fx:id="paneAdd" layoutX="451.0" layoutY="143.0" prefHeight="102.0" prefWidth="450.0" visible="false">
          <children>
             <AnchorPane layoutX="65.0" layoutY="35.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
                <children>
@@ -70,44 +88,25 @@
                         <Image url="@images/Subject_icon.png" />
                      </image>
                   </ImageView>
-                  <TextField fx:id="txtSubjectName" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="231.0" promptText="Subject name" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Times New Roman Bold" size="16.0" />
-                     </font>
-                  </TextField>
+                  <ComboBox fx:id="cmbSubject" layoutX="40.0" layoutY="3.0" prefHeight="26.0" prefWidth="241.0" promptText="Subject name" />
                </children>
             </AnchorPane>
-            <Button fx:id="btnNewSubject" layoutX="163.0" layoutY="209.0" mnemonicParsing="false" onAction="#btnNewSubjectOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+            <Button fx:id="btnNewSubject" layoutX="358.0" layoutY="37.0" mnemonicParsing="false" onAction="#btnNewSubjectOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Button>
-            <Label fx:id="label" layoutX="28.0" layoutY="6.0" />
-            <AnchorPane layoutX="28.0" layoutY="87.0" prefHeight="35.0" prefWidth="356.0" style="-fx-background-color: #003d66;">
-               <children>
-                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
-                     <image>
-                        <Image url="@images/teacher_icon.png" />
-                     </image>
-                  </ImageView>
-                  <TextField fx:id="txtTeacher" layoutX="34.0" layoutY="-1.0" prefHeight="35.0" prefWidth="221.0" promptText="Teacher" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
-                     <font>
-                        <Font name="Times New Roman Bold" size="16.0" />
-                     </font>
-                  </TextField>
-                  <ComboBox fx:id="cmbTeacher" layoutX="241.0" layoutY="3.0" prefHeight="26.0" prefWidth="106.0" />
-               </children>
-            </AnchorPane>
-            <Button fx:id="btnPlus" layoutX="404.0" layoutY="89.0" mnemonicParsing="false" onAction="#btnPlusOnClick" style="-fx-background-color: #010056;" text="+" textFill="#d9e9f2">
+            <Label fx:id="lblNew" layoutX="28.0" layoutY="6.0" />
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="panePrevious" layoutX="451.0" layoutY="271.0" prefHeight="200.0" prefWidth="450.0" visible="false">
+         <children>
+            <Button fx:id="btnPreviousSubject" layoutX="179.0" layoutY="146.0" mnemonicParsing="false" onAction="#btnPreviousSubjectOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="15.0" />
                </font>
             </Button>
-            <Label fx:id="lblTeachers" layoutX="65.0" layoutY="151.0" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="12.0" />
-               </font>
-            </Label>
+            <Label fx:id="lblPrevious" layoutX="36.0" layoutY="14.0" />
          </children>
       </AnchorPane>
    </children>
