--- a/src/main/resources/project/licenta/menu.fxml
+++ b/src/main/resources/project/licenta/menu.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
@@ -11,7 +12,7 @@
 
 <AnchorPane prefHeight="587.0" prefWidth="764.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Menu">
    <children>
-      <ImageView fitHeight="587.0" fitWidth="861.0" pickOnBounds="true">
+      <ImageView fitHeight="616.0" fitWidth="861.0" pickOnBounds="true">
          <image>
             <Image url="@images/login_background.jpg" />
          </image>
@@ -38,11 +39,16 @@
                   <Image url="@images/icon.png" />
                </image>
             </ImageView>
+            <Button fx:id="btnAddSemester1" layoutX="497.0" layoutY="7.0" mnemonicParsing="false" onAction="#btnAddSemesterOnClick" style="-fx-background-color: transparent;" text="Library" textAlignment="CENTER" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="20.0" />
+               </font>
+            </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="paneSemesterAdd" layoutX="374.0" layoutY="117.0" prefHeight="450.0" prefWidth="439.0" visible="false">
+      <AnchorPane fx:id="paneSemesterAdd" layoutX="374.0" layoutY="117.0" prefHeight="482.0" prefWidth="439.0" visible="false">
          <children>
-            <Button fx:id="btnAdd" layoutX="151.0" layoutY="370.0" mnemonicParsing="false" onAction="#btnAddOnClick" prefHeight="46.0" prefWidth="213.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Add" textFill="#d9e9f2">
+            <Button fx:id="btnAdd" layoutX="157.0" layoutY="408.0" mnemonicParsing="false" onAction="#btnAddOnClick" prefHeight="46.0" prefWidth="213.0" style="-fx-background-color: #000080; -fx-background-radius: 90;" text="Add" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font></Button>
@@ -123,6 +129,16 @@
                </children>
             </AnchorPane>
             <Label fx:id="label" layoutX="104.0" layoutY="14.0" />
+            <AnchorPane layoutX="131.0" layoutY="362.0" prefHeight="38.0" prefWidth="266.0" style="-fx-background-color: #003d66;">
+               <children>
+                  <CheckBox fx:id="chbTaxes" layoutX="161.0" layoutY="10.0" mnemonicParsing="false" />
+                  <Label layoutX="14.0" prefHeight="38.0" prefWidth="100.0" text="with fee" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gabriola" size="20.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="paneButtons" layoutX="34.0" layoutY="117.0" prefHeight="428.0" prefWidth="200.0" />
