--- a/src/main/resources/project/licenta/course_view.fxml
+++ b/src/main/resources/project/licenta/course_view.fxml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Course_view">
+<AnchorPane prefHeight="400.0" prefWidth="942.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.licenta.Course_view">
    <children>
-      <ImageView fitHeight="577.0" fitWidth="912.0" pickOnBounds="true">
+      <ImageView fitHeight="577.0" fitWidth="957.0" layoutX="-7.0" pickOnBounds="true">
          <image>
             <Image url="@images/login_background.jpg" />
          </image>
       </ImageView>
       <AnchorPane fx:id="paneMenu" layoutX="10.0" layoutY="14.0" prefHeight="56.0" prefWidth="838.0">
          <children>
-            <ImageView fitHeight="92.0" fitWidth="914.0" layoutX="-13.0" layoutY="-26.0" pickOnBounds="true">
+            <ImageView fitHeight="92.0" fitWidth="951.0" layoutX="-13.0" layoutY="-26.0" pickOnBounds="true">
                <image>
                   <Image url="@images/menu_background.jpg" />
                </image>
@@ -27,7 +29,7 @@
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btnBack" layoutX="577.0" layoutY="1.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Back to semesters" textAlignment="CENTER" textFill="#d9e9f2">
+            <Button fx:id="btnBack" layoutX="577.0" layoutY="1.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Back to semester" textAlignment="CENTER" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
@@ -39,23 +41,68 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="paneButtons" layoutX="25.0" layoutY="89.0" prefHeight="457.0" prefWidth="200.0">
+      <Label fx:id="lblSemester" layoutX="65.0" layoutY="160.0" textFill="#d9e9f2">
+         <font>
+            <Font name="Gadugi Bold" size="16.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblCourse" layoutX="65.0" layoutY="105.0" textFill="#d9e9f2" underline="true">
+         <font>
+            <Font name="Gadugi Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="65.0" layoutY="220.0" text="If a tax was paid" textFill="#d9e9f2">
+         <font>
+            <Font name="Gadugi Bold" size="15.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnPaid" layoutX="186.0" layoutY="215.0" mnemonicParsing="false" onAction="#btnPaidOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+         <font>
+            <Font name="Gadugi Bold" size="15.0" />
+         </font>
+      </Button>
+      <AnchorPane fx:id="panePaid" layoutX="481.0" layoutY="129.0" prefHeight="340.0" prefWidth="466.0" visible="false">
          <children>
-            <Label fx:id="lblSemester" layoutX="23.0" layoutY="14.0" textFill="#d9e9f2">
+            <Label fx:id="lblError" layoutX="14.0" layoutY="14.0" />
+            <AnchorPane layoutX="6.0" layoutY="61.0" prefHeight="38.0" prefWidth="388.0" style="-fx-background-color: #003d66;">
+               <children>
+                  <Label layoutX="14.0" prefHeight="38.0" prefWidth="210.0" text="Payment date of  tax" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gabriola" size="20.0" />
+                     </font>
+                  </Label>
+                  <DatePicker fx:id="dtpPaid" layoutX="173.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="105.0" layoutY="191.0" prefHeight="35.0" prefWidth="256.0" style="-fx-background-color: #003d66;">
+               <children>
+                  <ImageView fitHeight="43.0" fitWidth="44.0" layoutY="-1.0">
+                     <image>
+                        <Image url="@images/payment_icon.png" />
+                     </image>
+                  </ImageView>
+                  <TextField fx:id="txtAmount" layoutX="54.0" layoutY="5.0" prefHeight="26.0" prefWidth="196.0" promptText="Payment amount in RON" style="-fx-background-color: transparent; -fx-text-inner-color: d9e9f2;">
+                     <font>
+                        <Font name="Gadugi Bold" size="12.0" />
+                     </font>
+                  </TextField>
+               </children>
+            </AnchorPane>
+            <Button fx:id="btnNewTaxes" layoutX="198.0" layoutY="248.0" mnemonicParsing="false" onAction="#btnNewTaxesOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
                <font>
-                  <Font name="Gadugi Bold" size="20.0" />
+                  <Font name="Gadugi Bold" size="15.0" />
                </font>
-            </Label>
-            <Label fx:id="lblCourse" layoutX="23.0" layoutY="85.0" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi Bold" size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblTeachers" layoutX="27.0" layoutY="122.0" textFill="#d9e9f2">
-               <font>
-                  <Font name="Gadugi" size="15.0" />
-               </font>
-            </Label>
+            </Button>
+            <AnchorPane layoutX="106.0" layoutY="125.0" prefHeight="35.0" prefWidth="243.0" style="-fx-background-color: #003d66;">
+               <children>
+                  <ImageView fitHeight="35.0" fitWidth="40.0" layoutY="-1.0">
+                     <image>
+                        <Image url="@images/tax_icon.png" />
+                     </image>
+                  </ImageView>
+                  <ComboBox fx:id="cmbTaxType" layoutX="40.0" layoutY="3.0" prefHeight="26.0" prefWidth="196.0" promptText="Tax type" />
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
