--- a/src/main/resources/project/licenta/semesterfee.fxml
+++ b/src/main/resources/project/licenta/semesterfee.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -28,7 +29,7 @@
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
             </Button>
-            <Button fx:id="btnBack" layoutX="612.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Back to semester" textAlignment="CENTER" textFill="#d9e9f2">
+            <Button fx:id="btnBack" layoutX="654.0" layoutY="-2.0" mnemonicParsing="false" onAction="#btnBackOnClick" style="-fx-background-color: transparent;" text="Back to menu" textAlignment="CENTER" textFill="#d9e9f2">
                <font>
                   <Font name="Gadugi Bold" size="20.0" />
                </font>
@@ -59,7 +60,7 @@
             <Font name="Gadugi Bold" size="15.0" />
          </font>
       </Button>
-      <AnchorPane fx:id="panePaid" layoutX="471.0" layoutY="119.0" prefHeight="237.0" prefWidth="466.0">
+      <AnchorPane fx:id="panePaid" layoutX="471.0" layoutY="119.0" prefHeight="237.0" prefWidth="466.0" visible="false">
          <children>
             <Label fx:id="lblError" layoutX="14.0" layoutY="14.0" />
             <AnchorPane layoutX="6.0" layoutY="61.0" prefHeight="38.0" prefWidth="439.0" style="-fx-background-color: #003d66;">
@@ -92,5 +93,45 @@
             </Button>
          </children>
       </AnchorPane>
+      <AnchorPane fx:id="paneReminder" layoutX="471.0" layoutY="357.0" prefHeight="237.0" prefWidth="466.0" visible="false">
+         <children>
+            <Label fx:id="lblErrorReminder" layoutX="14.0" layoutY="14.0" />
+            <AnchorPane layoutX="6.0" layoutY="61.0" prefHeight="38.0" prefWidth="430.0" style="-fx-background-color: #003d66;">
+               <children>
+                  <Label layoutX="50.0" prefHeight="38.0" prefWidth="138.0" text=" Payment deadline" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gabriola" size="20.0" />
+                     </font>
+                  </Label>
+                  <DatePicker fx:id="dtpReminder" layoutX="223.0" layoutY="6.0" prefHeight="26.0" prefWidth="210.0" />
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="5.0" layoutY="119.0" prefHeight="35.0" prefWidth="434.0" style="-fx-background-color: #003d66;">
+               <children>
+                  <Label layoutX="42.0" layoutY="1.0" text="How many days before" textFill="#d9e9f2">
+                     <font>
+                        <Font name="Gabriola" size="20.0" />
+                     </font>
+                  </Label>
+                  <ComboBox fx:id="cmbDays" layoutX="217.0" layoutY="5.0" prefHeight="26.0" prefWidth="210.0" />
+               </children>
+            </AnchorPane>
+            <Button fx:id="btnNewReminder" layoutX="197.0" layoutY="178.0" mnemonicParsing="false" onAction="#btnNewReminderOnClick" prefHeight="31.0" prefWidth="70.0" style="-fx-background-radius: 10; -fx-background-color: #010056;" text="Add" textFill="#d9e9f2">
+               <font>
+                  <Font name="Gadugi Bold" size="15.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+      <Label layoutX="51.0" layoutY="238.0" text="To add a reminder" textFill="#d9e9f2">
+         <font>
+            <Font name="Gadugi Bold" size="15.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnReminder" layoutX="221.0" layoutY="233.0" mnemonicParsing="false" onAction="#btnReminderOnClick" prefHeight="31.0" prefWidth="90.0" style="-fx-background-color: transparent;" text="Click here" textAlignment="JUSTIFY" textFill="#010056">
+         <font>
+            <Font name="Gadugi Bold" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
